// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Component should render an Error component with custom icon 1`] = `
<div
  className="error__container"
>
  <i
    aria-hidden="true"
    className="error__icon fa fa-warning"
  />
  <div
    className="error__title"
  >
    UH OH! Something went wrong!
  </div>
  <div
    className="error__message"
  >
    <p
      key="0"
    >
      Sorry for the inconvenience, it looks like we just had a server error.
    </p>
    <p
      key="1"
    >
          Our team of developers has been notified and will get this problem fixed ASAP!
    </p>
  </div>
</div>
`;

exports[`Error Component should render an Error component with custom props 1`] = `
<div
  className="error__container"
>
  <Icon
    aria-hidden={true}
    className="error__icon"
    iconClassName="material-icons"
    name="warning"
    variant="default"
  />
  <div
    className="error__title"
  >
    Test title
  </div>
  <div
    className="error__message"
  >
    <p
      key="0"
    >
      Test message
    </p>
  </div>
</div>
`;

exports[`Error Component should render an Error component with defaults 1`] = `
<div
  className="error__container"
>
  <Icon
    aria-hidden={true}
    className="error__icon"
    iconClassName="material-icons"
    name="warning"
    variant="default"
  />
  <div
    className="error__title"
  >
    UH OH! Something went wrong!
  </div>
  <div
    className="error__message"
  >
    <p
      key="0"
    >
      Sorry for the inconvenience, it looks like we just had a server error.
    </p>
    <p
      key="1"
    >
          Our team of developers has been notified and will get this problem fixed ASAP!
    </p>
  </div>
</div>
`;
